# webscrepping-of-a-film-site

./: Main.py  entertainment_stuff.csv  watherscrepping.py
Package/: pyproject.toml  requirements.txt
